Rework Image Building Process (#547)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->
# Description

This PR reworks how Merlin simplifies the model image building by
merging the user and Merlin dependencies so the Conda environment
installation (creation) only happens once.

# Modifications

1. Publish merlin-pyfunc-server to PyPI
2. Add merlin-pyfunc-server onto the user's conda.yaml via merlin-sdk
and pyfunc-server/docker/base.Dockerfile
3. Refactor pyfunc-server/docker/base.Dockerfile and
pyfunc-server/docker/Dockerfile

# Tests
<!-- Besides the existing / updated automated tests, what specific
scenarios should be tested? Consider the backward compatibility of the
changes, whether corner cases are covered, etc. Please describe the
tests and check the ones that have been completed. Eg:
- [x] Deploying new and existing standard models
- [ ] Deploying PyFunc models
-->

- [x] Processing conda environment from merlin sdk 
- [x] Deploy pyfunc server model to gojek dev environment
- [x] Create prediction job to gojek dev environment

# Checklist
- [x] Added PR label
- [x] Added unit test, integration, and/or e2e tests
- [x] Tested locally
- [ ] Updated documentation
- [ ] Update Swagger spec if the PR introduce API changes
- [ ] Regenerated Golang and Python client if the PR introduces API
changes

# Release Notes
<!--
Does this PR introduce a user-facing change?
If no, just write "NONE" in the release-note block below.
If yes, a release note is required. Enter your extended release note in
the block below.
If the PR requires additional action from users switching to the new
release, include the string "action required".

For more information about release notes, see kubernetes' guide here:
http://git.k8s.io/c

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,15 +21,14 @@ jobs:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: 3.8
+          cache: pip
       - name: Install dependencies
         working-directory: ./python/sdk
-        run: |
-          python -m pip install --upgrade pip
-          pip install setuptools wheel twine
+        run: pip install setuptools>=64 setuptools_scm>=8 twine wheel
       - name: Build and publish
         env:
           TWINE_USERNAME: ${{ secrets.pypi_username }}
@@ -38,6 +37,56 @@ jobs:
         run: |
           tag=$(git describe --tags --always --first-parent)
           sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag//v}"`\"|g" ./merlin/version.py
+          python setup.py sdist bdist_wheel
+          twine upload dist/*
+
+  publish-merlin-pyfunc-server:
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.8
+          cache: pip
+      - name: Install dependencies
+        working-directory: ./python/pyfunc-server
+        run: pip install setuptools>=64 setuptools_scm>=8 twine wheel
+      - name: Build and publish
+        env:
+          TWINE_USERNAME: ${{ secrets.pypi_username }}
+          TWINE_PASSWORD: ${{ secrets.pypi_password }}
+        working-directory: ./python/pyfunc-server
+        run: |
+          tag=$(python -m setuptools_scm -r ../.. | sed 's/\+.*//')
+          sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag}"`\"|g" ./pyfuncserver/version.py
+          python setup.py sdist bdist_wheel
+          twine upload dist/*
+
+  publish-merlin-batch-predictor:
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.8
+          cache: pip
+      - name: Install dependencies
+        working-directory: ./python/batch-predictor
+        run: pip install setuptools>=64 setuptools_scm>=8 twine wheel
+      - name: Build and publish
+        env:
+          TWINE_USERNAME: ${{ secrets.pypi_username }}
+          TWINE_PASSWORD: ${{ secrets.pypi_password }}
+        working-directory: ./python/batch-predictor
+        run: |
+          tag=$(python -m setuptools_scm -r ../.. | sed 's/\+.*//')
+          sed -i -e "s|VERSION = \".*\"|VERSION = \"`echo "${tag}"`\"|g" ./merlinpyspark/version.py
           python setup.py sdist bdist_wheel
           twine upload dist/*
 
@@ -50,7 +99,7 @@ jobs:
     needs:
       - publish-python-sdk
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Log in to the Container registry
         uses: docker/login-action@v1
         with:
@@ -117,7 +166,7 @@ jobs:
           docker tag merlin-logger:${{ inputs.version }} ${IMAGE_TAG}
           docker push ${IMAGE_TAG}
 
-  publish-batch-predictor:
+  publish-batch-predictor-base-image:
     runs-on: ubuntu-latest
     env:
       DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyspark-base:${{ inputs.version }}"
@@ -137,7 +186,7 @@ jobs:
           docker image load --input merlin-pyspark-base.${{ inputs.version }}.tar
           docker push ${{ env.DOCKER_IMAGE_TAG }}
 
-  publish-pyfunc:
+  publish-pyfunc-server-base-image:
     runs-on: ubuntu-latest
     env:
       DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyfunc-base:${{ inputs.version }}"
