--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -19,7 +19,7 @@ jobs:
     outputs:
       version: ${{ steps.create_version.outputs.version }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
       - id: create_version
@@ -47,8 +47,8 @@ jobs:
     env:
       PIPENV_DEFAULT_PYTHON_VERSION: ${{ matrix.python-version }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - uses: actions/cache@v3
@@ -79,8 +79,8 @@ jobs:
     env:
       PIPENV_DEFAULT_PYTHON_VERSION: ${{ matrix.python-version }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - uses: actions/cache@v3
@@ -111,8 +111,8 @@ jobs:
     env:
       PIPENV_DEFAULT_PYTHON_VERSION: ${{ matrix.python-version }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - uses: actions/cache@v3
@@ -162,7 +162,7 @@ jobs:
         ports:
           - 5432:5432
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: actions/setup-go@v2
         with:
           go-version: ${{ env.GO_VERSION }}
@@ -186,15 +186,14 @@ jobs:
           POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
         run: make it-test-api-ci
 
-
   test-observation-publisher:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         id: setup-python
         with:
-          python-version: '3.10'
+          python-version: "3.10"
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pip
@@ -213,7 +212,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout to the target branch
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - uses: actions/setup-node@v2
         with:
           node-version: 16
@@ -266,7 +265,7 @@ jobs:
       - build-ui
       - test-api
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Download UI Dist
         uses: actions/download-artifact@v2
         with:
@@ -283,7 +282,7 @@ jobs:
           path: merlin.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
-  build-batch-predictor-base:
+  build-batch-predictor-base-image:
     runs-on: ubuntu-latest
     needs:
       - create-version
@@ -291,9 +290,17 @@ jobs:
     env:
       DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyspark-base:${{ needs.create-version.outputs.version }}"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Build Batch Predictor Base Docker
         run: docker build -t ${{ env.DOCKER_IMAGE_TAG }} -f python/batch-predictor/docker/base.Dockerfile python
+      - name: Test Build Batch Predictor Docker
+        run: |
+          docker build -t "test-batch-predictor:1" \
+            -f python/batch-predictor/docker/local-app.Dockerfile \
+            --build-arg BASE_IMAGE=${{ env.DOCKER_IMAGE_TAG }} \
+            --build-arg MODEL_DEPENDENCIES_URL=batch-predictor/test-model/conda.yaml \
+            --build-arg MODEL_ARTIFACTS_URL=batch-predictor/test-model \
+            python
       - name: Save Batch Predictor Base Docker
         run: docker image save --output merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar ${{ env.DOCKER_IMAGE_TAG }}
       - name: Publish Batch Predictor Base Docker Artifact
@@ -303,7 +310,7 @@ jobs:
           path: merlin-pyspark-base.${{ needs.create-version.outputs.version }}.tar
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
-  build-pyfunc-server-base:
+  build-pyfunc-server-base-image:
     runs-on: ubuntu-latest
     needs:
       - create-version
@@ -312,9 +319,17 @@ jobs:
       DOCKER_REGISTRY: ghcr.io
       DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-pyfunc-base:${{ needs.create-version.outputs.version }}"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Build Pyfunc Server Base Docker
         run: docker build -t ${{ env.DOCKER_IMAGE_TAG }} -f python/pyfunc-server/docker/base.Dockerfile python
+      - name: Test Build Pyfunc Server Docker
+        run: |
+          docker build -t "test-pyfunc-server:1" \
+            -f python/pyfunc-server/docker/local.Dockerfile \
+            --build-arg BASE_IMAGE=${{ env.DOCKER_IMAGE_TAG }} \
+            --build-arg MODEL_DEPENDENCIES_URL=pyfunc-server/test/local-artifacts/conda.yaml \
+            --build-arg MODEL_ARTIFACTS_URL=pyfunc-server/test/local-artifacts \
+            python
       - name: Save Pyfunc Server Base Docker
         run: docker image save --output merlin-pyfunc-base.${{ needs.create-version.outputs.version }}.tar ${{ env.DOCKER_IMAGE_TAG }}
       - name: Publish Pyfunc Server Base Docker Artifact
@@ -329,7 +344,7 @@ jobs:
     needs:
       - create-version
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - uses: actions/setup-go@v2
         with:
           go-version: ${{ env.GO_VERSION }}
@@ -387,7 +402,7 @@ jobs:
       DOCKER_REGISTRY: ghcr.io
       DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-observation-publisher:${{ needs.create-version.outputs.version }}"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Build Observation Publisher Docker
         env:
           OBSERVATION_PUBLISHER_IMAGE_TAG: ${{ env.DOCKER_IMAGE_TAG }}
@@ -417,10 +432,10 @@ jobs:
       E2E_PYTHON_VERSION: "3.10.6"
       K3S_VERSION: v1.26.7-k3s1
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           path: merlin
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.E2E_PYTHON_VERSION }}
       - uses: actions/cache@v3
@@ -502,8 +517,8 @@ jobs:
     needs:
       - create-version
       - build-api
-      - build-batch-predictor-base
-      - build-pyfunc-server-base
+      - build-batch-predictor-base-image
+      - build-pyfunc-server-base-image
       - build-observation-publisher
       - test-python-sdk
       - e2e-test
