--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -5,8 +5,8 @@ confluent-kafka==2.3.0
 grpcio-health-checking
 grpcio-reflection
 merlin-sdk==0.40.1
-numpy >= 1.8.2
+numpy>=1.8.2
 orjson>=2.6.8
-prometheus_client==0.14.1
+prometheus-client
 tornado
 uvloop
