--- a/python/batch-predictor/requirements.txt
+++ b/python/batch-predictor/requirements.txt
@@ -2,5 +2,5 @@ cloudpickle==2.0.0
 findspark==2.0.1
 merlin-sdk==0.40.1
 mlflow==1.26.1
-pyarrow>=0.14.1,<=9.0.0
+pyarrow>=0.14.1,<11.0.0
 pyspark==3.0.1
