--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -12,14 +12,16 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v4
-      - name: Build and push MLflow Docker image
-        uses: docker/build-push-action@v1
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
         with:
+          registry: ${{ env.DOCKER_REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: ghcr.io
-          repository: caraml-dev/mlflow
-          path: mlflow
-          dockerfile: mlflow/Dockerfile
-          build_args: MLFLOW_VERSION=1.3.0
-          tags: 1.3.0
+      - name: Build and push MLflow Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: mlflow
+          file: Dockerfile
+          build-args: MLFLOW_VERSION=1.3.0
+          tags: ghcr.io/caraml-dev/mlflow:1.3.0
