Fix errors: fix lint-api; use node 18; fix miss DOCKER_REGISTRY env

--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -5,6 +5,9 @@ on:
       - main
   pull_request:
 
+env:
+  DOCKER_REGISTRY: ghcr.io
+
 jobs:
   publish-mlflow-docker:
     runs-on: ubuntu-latest
