--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -25,6 +25,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: mlflow
-          file: Dockerfile
+          file: mlflow/Dockerfile
           build-args: MLFLOW_VERSION=1.3.0
           tags: ghcr.io/caraml-dev/mlflow:1.3.0
