--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -231,24 +231,7 @@ jobs:
         with:
           node-version: 18
           cache: "yarn"
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn cache dir)" >> "$GITHUB_OUTPUT"
-      - name: Cache YARN
-        uses: actions/cache@v4
-        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
-      - name: Cache Node Modules
-        uses: actions/cache@v4
-        with:
-          path: ui/node_modules
-          key: |
-            ${{ runner.os }}-modules-${{ hashFiles('ui/yarn.lock') }}
-          restore-keys: ${{ runner.os }}-modules-
+          cache-dependency-path: ui/yarn.lock
       - name: Install dependencies
         run: make init-dep-ui
       - name: Lint UI files
