--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -229,8 +229,8 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: "yarn"
+          node-version: 16
+          cache: yarn
           cache-dependency-path: ui/yarn.lock
       - name: Install dependencies
         run: make init-dep-ui
