--- a/python/pyfunc-server/docker/Dockerfile
+++ b/python/pyfunc-server/docker/Dockerfile
@@ -25,25 +25,26 @@ ARG AWS_SECRET_ACCESS_KEY
 ARG AWS_DEFAULT_REGION
 ARG AWS_ENDPOINT_URL
 
-RUN if [[ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" == "gcs" ]]; then  \
+RUN if [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "gcs" ]; then  \
         if [ ! -z "${GOOGLE_APPLICATION_CREDENTIALS}" ]; then \
             gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS} > gcloud-auth.txt; \
         else echo "GOOGLE_APPLICATION_CREDENTIALS is not set. Skipping gcloud auth command." > gcloud-auth.txt; \
         fi \
-    elif [[ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" == "s3" ]]; then \
-       echo "S3 credentials used" \
+    elif [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "s3" ]; then \
+       echo "S3 credentials used"; \
     else \
-       echo "No credentials are used" \
+       echo "No credentials are used"; \
     fi
 
 # Download and install user model dependencies
 ARG MODEL_DEPENDENCIES_URL
-RUN if [[ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" == "gcs" ]]; then  \
-        gsutil cp ${MODEL_DEPENDENCIES_URL} conda.yaml \
-    elif [[ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" == "s3" ]]; then \
-        aws s3api get-object --bucket ${MODEL_DEPENDENCIES_S3_BUCKET} --key ${MODEL_DEPENDENCIES_URL}/conda.yaml conda.yaml \
+RUN if [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "gcs" ]; then  \
+        gsutil cp ${MODEL_DEPENDENCIES_URL} conda.yaml; \
+    elif [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "s3" ]; then \
+        S3_KEY=${MODEL_DEPENDENCIES_URL##*s3://}; \
+        aws s3api get-object --bucket ${S3_KEY%%/*} --key ${S3_KEY#*/} conda.yaml; \
     else \
-        echo "No credentials are used" \
+        echo "No credentials are used"; \
     fi
 
 ARG MERLIN_DEP_CONSTRAINT
@@ -52,12 +53,12 @@ RUN conda env create --name merlin-model --file conda.yaml
 
 # Download and dry-run user model artifacts and code
 ARG MODEL_ARTIFACTS_URL
-RUN if [[ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" == "gcs" ]]; then  \
-        gsutil -m cp -r ${MODEL_ARTIFACTS_URL} . \
-    elif [[ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" == "s3" ]]; then \
-        aws s3 cp ${MODEL_ARTIFACTS_URL} . --recursive \
+RUN if [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "gcs" ]; then  \
+        gsutil -m cp -r ${MODEL_ARTIFACTS_URL} .; \
+    elif [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "s3" ]; then \
+        aws s3 cp ${MODEL_ARTIFACTS_URL} . --recursive; \
     else \
-        echo "No credentials are used" \
+        echo "No credentials are used"; \
     fi
 RUN /bin/bash -c ". activate merlin-model && merlin-pyfunc-server --model_dir model --dry_run"
 
