Add google cloud sdk installation

--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -48,6 +48,8 @@ jobs:
       PIPENV_DEFAULT_PYTHON_VERSION: ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v4
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v2
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
