--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -4,10 +4,10 @@ cloudpickle==2.0.0
 confluent-kafka==2.3.0
 grpcio-health-checking
 grpcio-reflection
-merlin-sdk==0.44.0
 numpy>=1.8.2
 orjson>=2.6.8
 prometheus-client
 setuptools<75
 tornado
 uvloop
+file:../sdk
