--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -10,3 +10,4 @@ prometheus-client
 setuptools<75
 tornado
 uvloop
+git+https://github.com/caraml-dev/merlin.git@upgrade_mlflow_version#subdirectory=python/sdk
