Test addition of merlin-sdk local installation to pipfiles

--- a/python/pyfunc-server/Pipfile
+++ b/python/pyfunc-server/Pipfile
@@ -5,3 +5,4 @@ verify_ssl = true
 
 [packages]
 pyfuncserver = {editable = true, extras = ["test"], path = "."}
+merlin-sdk = {editable = true, extras = ["test"], path = "../sdk"}
