--- a/python/batch-predictor/Pipfile
+++ b/python/batch-predictor/Pipfile
@@ -4,7 +4,8 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-merlin-batch-predictor = {editable = true,extras = ["test"],path = "."}
+merlin-batch-predictor = {editable = true,extras = ["test"], path = "."}
 
 [packages]
 merlin-batch-predictor = {editable = true, extras = ["test"], path = "."}
+merlin-sdk = {editable = true, extras = ["test"], path = "../sdk"}
