Temporarily add git file path in pyfunc server and batch predictor requirements file

--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -10,4 +10,4 @@ prometheus-client
 setuptools<75
 tornado
 uvloop
-file:../sdk
+merlin-sdk @ git+https://github.com/caraml-dev/merlin@upgrade_mlflow_version#subdirectory=python/sdk
