--- a/python/batch-predictor/requirements.txt
+++ b/python/batch-predictor/requirements.txt
@@ -4,4 +4,4 @@ mlflow==2.16.2
 pyarrow>=0.14.1,<=17.0.0
 pyspark==3.0.1
 setuptools<75
-file:../sdk
+merlin-sdk @ git+https://github.com/caraml-dev/merlin@upgrade_mlflow_version#subdirectory=python/sdk
