feat(api): Refactor API server to introduce support for Docker image registries and s3 bucket support (#605)
## Note 🚨
~~This PR should not be merged without the changes in
https://github.com/caraml-dev/mlp/pull/116 being merged, published and
imported as dependencies first. This PR is currently only using a branch
of a fork (the source of the quoted PR) of the MLP repository.~~ The
dependent PR has been merged.

# Description
In order to provide support for using image registries that use [Docker
registry
credentials](https://docs.docker.com/reference/cli/docker/login/#configure-the-credential-store)
as well as [AWS S3-based blob storage
services](https://docs.aws.amazon.com/code-library/latest/ug/go_2_s3_code_examples.html),
this PR refactors the API server to support these additional image
registry and bob storage options. More concretely, these are the
following changes made:

- Set up the workflow needed to allow platform maintainers to configure
the image registry that the API server will push images to (Docker or
Google Cloud/Artifact Registry) as well as the blob storage service that
it should read model artifacts from/write files to (S3-based
store/Google Cloud Storage)
- Allow the API server to access a configured Docker registry to check
if an image is available
- Allow the API server to check and hash model dependencies in a
configured S3-based store
- Allow Kaniko jobs spun up by the API server to use load model
artifacts from a configured S3-based store when building model images
- Allow Kaniko jobs spun up by the API server to push images to the
configured Docker registry

# Modifications
- `api/cmd/api/setup.go` - Make the initialisation of the image builder
set up the artifact service type and docker registry correctly depending
on the one set up
- `api/config/config.go` - Introduce new configs for platform
maintainers to specify the `KanikoPushRegistryType` and the
`KanikoDockerCredentialSecretName`
- `api/pkg/

--- a/python/pyfunc-server/docker/Dockerfile
+++ b/python/pyfunc-server/docker/Dockerfile
@@ -13,17 +13,39 @@
 # limitations under the License.
 
 ARG BASE_IMAGE
+
 FROM ${BASE_IMAGE}
 
+ARG MLFLOW_ARTIFACT_STORAGE_TYPE
+
 ARG GOOGLE_APPLICATION_CREDENTIALS
-RUN if [ ! -z "${GOOGLE_APPLICATION_CREDENTIALS}" ]; \
-    then gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS} > gcloud-auth.txt; \
-    else echo "GOOGLE_APPLICATION_CREDENTIALS is not set. Skipping gcloud auth command." > gcloud-auth.txt; \
+
+ARG AWS_ACCESS_KEY_ID
+ARG AWS_SECRET_ACCESS_KEY
+ARG AWS_DEFAULT_REGION
+ARG AWS_ENDPOINT_URL
+
+RUN if [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "gcs" ]; then  \
+        if [ ! -z "${GOOGLE_APPLICATION_CREDENTIALS}" ]; then \
+            gcloud auth activate-service-account --key-file=${GOOGLE_APPLICATION_CREDENTIALS} > gcloud-auth.txt; \
+        else echo "GOOGLE_APPLICATION_CREDENTIALS is not set. Skipping gcloud auth command." > gcloud-auth.txt; \
+        fi \
+    elif [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "s3" ]; then \
+       echo "S3 credentials used"; \
+    else \
+       echo "No credentials are used"; \
     fi
 
 # Download and install user model dependencies
 ARG MODEL_DEPENDENCIES_URL
-RUN gsutil cp ${MODEL_DEPENDENCIES_URL} conda.yaml
+RUN if [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "gcs" ]; then  \
+        gsutil cp ${MODEL_DEPENDENCIES_URL} conda.yaml; \
+    elif [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "s3" ]; then \
+        S3_KEY=${MODEL_DEPENDENCIES_URL##*s3://}; \
+        aws s3api get-object --bucket ${S3_KEY%%/*} --key ${S3_KEY#*/} conda.yaml; \
+    else \
+        echo "No credentials are used"; \
+    fi
 
 ARG MERLIN_DEP_CONSTRAINT
 RUN process_conda_env.sh conda.yaml "merlin-pyfunc-server" "${MERLIN_DEP_CONSTRAINT}"
@@ -31,7 +53,13 @@ RUN conda env create --name merlin-model --file conda.yaml
 
 # Download and dry-run user model artifacts and code
 ARG MODEL_ARTIFACTS_URL
-RUN gsutil -m cp -r ${MODEL_ARTIFACTS_URL} .
+RUN if [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "gcs" ]; then  \
+        gsutil -m cp -r ${MODEL_ARTIFACTS_URL} .; \
+    elif [ "${MLFLOW_ARTIFACT_STORAGE_TYPE}" = "s3" ]; then \
+        aws s3 cp ${MODEL_ARTIFACTS_URL} model --recursive; \
+    else \
+        echo "No credentials are used"; \
+    fi
 RUN /bin/bash -c ". activate merlin-model && merlin-pyfunc-server --model_dir model --dry_run"
 
 CMD ["run.sh"]
