--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-version: '3'
 services:
   postgres:
     image: bitnami/postgresql:latest
@@ -22,6 +21,7 @@ services:
       - POSTGRESQL_USERNAME=merlin
       - POSTGRESQL_PASSWORD=merlin
       - POSTGRESQL_DATABASE=merlin
+      - POSTGRESQL_REPLICATION_USE_PASSFILE=false
 
   migrations:
     depends_on:
