Test local merlin-sdk point to repo

--- a/python/sdk/test/pyfunc/env.yaml
+++ b/python/sdk/test/pyfunc/env.yaml
@@ -7,3 +7,4 @@ dependencies:
       - xgboost==1.6.2
       - pytest
       - pytest-xdist==1.34.0
+      - merlin-pyfunc-server @ git+https://github.com/caraml-dev/merlin@test-branch#subdirectory=python/pyfunc-server
