--- a/python/pyfunc-server/requirements.txt
+++ b/python/pyfunc-server/requirements.txt
@@ -4,10 +4,11 @@ cloudpickle==2.0.0
 confluent-kafka==2.3.0
 grpcio-health-checking
 grpcio-reflection
-merlin-sdk==0.45.1
 numpy>=1.8.2
 orjson>=2.6.8
 prometheus-client
 setuptools<75
 tornado
 uvloop
+merlin-sdk @ git+https://github.com/caraml-dev/merlin@test-branch#subdirectory=python/sdk
+
