Add kaniko api server env vars to merlin api configs

--- a/api/config/testdata/base-configs-1.yaml
+++ b/api/config/testdata/base-configs-1.yaml
@@ -50,6 +50,8 @@ ImageBuilderConfig:
   KanikoAdditionalArgs:
     - --test=true
     - --no-logs=false
+  KanikoAPIServerEnvVars:
+    - TEST_ENV_VAR
   DefaultResources:
     Requests:
       CPU: "1"
