--- a/python/batch-predictor/requirements.txt
+++ b/python/batch-predictor/requirements.txt
@@ -3,5 +3,6 @@ findspark==2.0.1
 merlin-sdk==0.45.1
 mlflow==1.26.1
 pyarrow>=0.14.1,<=17.0.0
-pyspark==3.0.1
+pyspark==3.1.3
 setuptools<75
+protobuf==5.29.3
