--- a/python/observation-publisher/requirements.txt
+++ b/python/observation-publisher/requirements.txt
@@ -15,7 +15,7 @@ antlr4-python3-runtime==4.9.3
     #   hydra-core
     #   omegaconf
 arize==7.10.2
-    # via -r requirements.in
+    # via -r requirements.in,
 arrow==1.3.0
     # via cookiecutter
 binaryornot==0.4.4
@@ -294,6 +294,7 @@ werkzeug==3.0.1
     # via flask
 zipp==3.17.0
     # via importlib-metadata
+pyodps==0.12.2
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
