--- a/.github/workflows/merlin.yml
+++ b/.github/workflows/merlin.yml
@@ -242,6 +242,7 @@ jobs:
     needs:
       - create-version
       - build-ui
+      - test-api
     steps:
       - uses: actions/checkout@v4
       - name: Download UI Dist
@@ -369,6 +370,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - create-version
+      - test-observation-publisher
     env:
       DOCKER_REGISTRY: ghcr.io
       DOCKER_IMAGE_TAG: "ghcr.io/${{ github.repository }}/merlin-observation-publisher:${{ needs.create-version.outputs.version }}"
