--- a/python/observation-publisher/requirements.txt
+++ b/python/observation-publisher/requirements.txt
@@ -297,4 +297,4 @@ zipp==3.17.0
 pyodps==0.12.2
 
 # The following packages are considered to be unsafe in a requirements file:
-setuptools
+# setuptools
