Add maxcompute batch predictor (#626)
<!--  Thanks for sending a pull request!  Here are some tips for you:

1. Run unit tests and ensure that they are passing
2. If your change introduces any API changes, make sure to update the
e2e tests
3. Make sure documentation is updated for your PR!

-->
# Description
* This PR adds MaxCompute as a source and sink to batch prediction jobs.
This allows users to perform batch prediction on data stored in
MaxCompute and write the results back into MaxCompute.

# Modifications
* `python/batch-predictor` 
  * `merlinpyspark` package source code modified
  * Added missing proto spec for PredictionJob protobuf
  * Added MaxCompute Jar dependencies to base.Dockerfile
* `python/sdk`
* Modified python sdk to include MaxComputeSource and MaxComputeSink
classes
  * Modified swagger.yaml and regenerated python and go clients
  * Will add tests and readme in separate MR

# Tests
<!-- Besides the existing / updated automated tests, what specific
scenarios should be tested? Consider the backward compatibility of the
changes, whether corner cases are covered, etc. Please describe the
tests and check the ones that have been completed. Eg:
- [x] Deploying new and existing standard models
- [ ] Deploying PyFunc models
-->

# Checklist
- [x] Added PR label
- [ ] Added unit test, integration, and/or e2e tests
- [x] Tested locally
- [ ] Updated documentation
- [x] Update Swagger spec if the PR introduce API changes
- [x] Regenerated Golang and Python client if the PR introduces API
changes

# Release Notes
<!--
Does this PR introduce a user-facing change?
If no, just write "NONE" in the release-note block below.
If yes, a release note is required. Enter your extended release note in
the block below.
If the PR requires additional action from users switching to the new
release, include the string "action required".

For more information about release notes, see kubernetes' guide here:
http://git.k8s.io/community/contributors/guide/release-notes.md
--

--- a/python/batch-predictor/Makefile
+++ b/python/batch-predictor/Makefile
@@ -1,12 +1,16 @@
 export OBJC_DISABLE_INITIALIZE_FORK_SAFETY=YES
 
+PROTOC_GEN_GO_JSON_VERSION="v1.1.0"
+PROTOC_GEN_GO_VERSION="v1.26"
+PROTOC_PATH ?= protoc  # Default to 'protoc' if PROTOC_PATH is not set
+
 .PHONY: setup
 setup:
 	@pipenv install --skip-lock -e .[test]
 
 .PHONY: type_check
 type_check:
-	@pipenv run mypy --ignore-missing-imports --allow-untyped-globals  merlinpyspark
+	@pipenv run mypy --ignore-missing-imports --allow-untyped-globals merlinpyspark
 
 .PHONY: test
 test: type_check
@@ -20,5 +24,13 @@ unit-test: type_check
 
 .PHONY: proto
 proto:
-	go get github.com/mitchellh/protoc-gen-go-json
-	protoc -I=. --python_out=merlinpyspark --mypy_out=merlinpyspark --go_out=pkg/ --go-json_out=pkg/ --go_opt=paths=source_relative spec/*.proto
+	@echo "Checking libprotoc version..."
+	@echo "protocPath=$(PROTOC_PATH)"
+	@PROTOC_VERSION=$$($(PROTOC_PATH) --version | grep -o '[0-9]\+\.[0-9]\+\(\.[0-9]\+\)\?'); \
+	if [ "$$PROTOC_VERSION" != "25.6" ]; then \
+		echo "Error: libprotoc version 25.6 is required. Found version $$PROTOC_VERSION."; \
+		echo "Download protoc version from https://repo1.maven.org/maven2/com/google/protobuf/protoc/3.25.6/"; \
+		exit 1; \
+	fi
+	go install github.com/mitchellh/protoc-gen-go-json@${PROTOC_GEN_GO_JSON_VERSION}
+	@$(PROTOC_PATH) -I=. --python_out=merlinpyspark --mypy_out=merlinpyspark --go_out=pkg/ --go-json_out=pkg/ --go_opt=paths=source_relative spec/*.proto
