Batch predictor add make task build install sdk local

--- a/python/batch-predictor/Makefile
+++ b/python/batch-predictor/Makefile
@@ -4,9 +4,21 @@ PROTOC_GEN_GO_JSON_VERSION="v1.1.0"
 PROTOC_GEN_GO_VERSION="v1.26"
 PROTOC_PATH ?= protoc  # Default to 'protoc' if PROTOC_PATH is not set
 
+# @pip install pipenv==2023.7.23
+
 .PHONY: setup
 setup:
+	@pip install pipenv
 	@pipenv install --skip-lock -e .[test]
+
+SDK_VER = $(subst v,,$(SDK_VERSION))
+
+.PHONY: build-install-sdk
+build-install-sdk:
+	cd ../sdk && pip install setuptools setuptools_scm twine wheel
+	cd ../sdk && sed -i -e "s|VERSION = \".*\"|VERSION = \"$(SDK_VER)\"|g" ./merlin/version.py
+	cd ../sdk && python setup.py sdist bdist_wheel
+	pip install ../sdk/dist/merlin_sdk-$(SDK_VER)-py3-none-any.whl
 
 .PHONY: type_check
 type_check:
