--- a/python/pyfunc-server/Pipfile
+++ b/python/pyfunc-server/Pipfile
@@ -5,3 +5,6 @@ verify_ssl = true
 
 [packages]
 pyfuncserver = {editable = true, extras = ["test"], path = "."}
+merlin-pyfunc-server = {extras = ["test"], file = ".", editable = true}
+
+[dev-packages]
