Use "pipenv run pip install" instead of "pip install"

--- a/python/batch-predictor/Makefile
+++ b/python/batch-predictor/Makefile
@@ -8,8 +8,8 @@ PROTOC_PATH ?= protoc  # Default to 'protoc' if PROTOC_PATH is not set
 
 .PHONY: setup
 setup:
-	$(MAKE) install_sdk
 	@pip install pipenv
+	$(MAKE) install_sdk
 	@pipenv install --skip-lock -e .[test]
 
 .PHONY: type_check
@@ -51,4 +51,4 @@ build_install_sdk:
 	cd ../sdk && pip install setuptools setuptools_scm twine wheel
 	cd ../sdk && sed -i -e "s|VERSION = \".*\"|VERSION = \"${SDK_VER}\"|g" ./merlin/version.py
 	cd ../sdk && python setup.py sdist bdist_wheel
-	pip install ../sdk/dist/merlin_sdk-${SDK_VER}-py3-none-any.whl
+	pipenv run pip install ../sdk/dist/merlin_sdk-${SDK_VER}-py3-none-any.whl
