--- a/python/pyfunc-server/Makefile
+++ b/python/pyfunc-server/Makefile
@@ -1,7 +1,7 @@
 .PHONY: setup
 setup:
-	$(MAKE) install_sdk
 	pip install pipenv
+	$(MAKE) install_sdk
 	pipenv install --skip-lock -e .[test]
 
 .PHONY: test
@@ -27,4 +27,4 @@ build_install_sdk:
 	cd ../sdk && pip install setuptools setuptools_scm twine wheel
 	cd ../sdk && sed -i -e "s|VERSION = \".*\"|VERSION = \"${SDK_VER}\"|g" ./merlin/version.py
 	cd ../sdk && python setup.py sdist bdist_wheel
-	pip install ../sdk/dist/merlin_sdk-${SDK_VER}-py3-none-any.whl
+	pipenv run pip install ../sdk/dist/merlin_sdk-${SDK_VER}-py3-none-any.whl
