--- a/python/Makefile
+++ b/python/Makefile
@@ -10,5 +10,5 @@ VER = $(subst v,,$(VERSION))
 # to update merlin-sdk version in packages that depend on it
 .PHONY: update-sdk-version
 update-sdk-version:
-	sed -i -e "s|merlin-sdk.*|merlin-sdk==$(VER)|g" ./batch-predictor/requirements.txt
-	sed -i -e "s|merlin-sdk.*|merlin-sdk==$(VER)|g" ./pyfunc-server/requirements.txt
+	sed -i -e "s|merlin-sdk.*|merlin-sdk==${VER}|g" ./batch-predictor/requirements.txt
+	sed -i -e "s|merlin-sdk.*|merlin-sdk==${VER}|g" ./pyfunc-server/requirements.txt
