Simplify build_install_sdk to only use merlin-sdk version 0.0.0

--- a/python/pyfunc-server/Makefile
+++ b/python/pyfunc-server/Makefile
@@ -17,11 +17,7 @@ benchmark:
 	cd benchmark && ./benchmark.sh
 
 .PHONY: build_install_sdk
-
-SDK_VER := $(shell grep '^merlin-sdk' requirements.txt | awk -F '[=<>]+' '{print $$2}')
-
 build_install_sdk:
 	cd ../sdk && pip install setuptools setuptools_scm twine wheel
-	cd ../sdk && sed -i -e "s|VERSION = \".*\"|VERSION = \"${SDK_VER}\"|g" ./merlin/version.py
 	cd ../sdk && python setup.py sdist bdist_wheel
-	pipenv run pip install ../sdk/dist/merlin_sdk-${SDK_VER}-py3-none-any.whl
+	pipenv run pip install ../sdk/dist/merlin_sdk-0.0.0-py3-none-any.whl
